# bulletin_board

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
advertisements/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  views.py
advertisements/migrations/: 0001_initial.py  0002_initial.py  0003_alter_announcement_author_alter_review_ad.py  0004_alter_announcement_options.py
config/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
