[tool.poetry]
name = "bulletin-board"
version = "0.1.0"
description = ""
authors = ["Матвей Новиков <originsik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
drf-yasg = "^1.21.8"
djangorestframework-simplejwt = "^5.4.0"
django-filter = "^24.3"
djoser = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
